[Dev] Fix de tags y endpoints de followes
